# spookapp

./: .gitignore  .gitmodules  Readme.md  build_backend.sh  build_frontend_ghcjs.sh  cabal.project  default.nix  deploy_gce.nix  deploy_logical.nix  deploy_vbox.nix  develop.sh  grafana.json  release.nix  run_backend.sh  run_frontend_autoreload.sh
backend/: backend.cabal
backend/app/: Main.hs
backend/src/Spook/Server/: Data.hs  KeyPerm.hs  Model.hs  Serve.hs  Youtube.hs
backend/test/Spook/Server/: ServeSpec.hs
common/: common.cabal
common/src/Spook/Common/: Api.hs  Model.hs  Servant.hs
frontend/: frontend.cabal
frontend/app/: Main.hs
frontend/src/Spook/App/: Analytics.hs  Assets.hs  BootstrapCss.hs  Common.hs  Fluent.hs  Main.hs  Runner.hs  Style.hs
frontend/test/KlenLi/App/: FluentSpec.hs  RouteSpec.hs
frontend/test/Spook/App/: FluentSpec.hs
